--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -1,5 +1,12 @@
 {{- if .Values.ingress.enabled -}}
-{{- $svcPort := .Values.ingress.servicePort -}}
+{{- $svcPort := 0 -}}
+{{- range .Values.services -}}
+{{- if eq .name "http" -}}
+{{- $svcPort = .servicePort -}}
+{{- else -}}
+{{- $svcPort = "80" -}}
+{{- end -}}
+{{- end -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
