--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,108 +1,30 @@
-# Default values for basic.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
-
 replicaCount: 1
-
-image:
-  imagePolicy: ""
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
-
-podAnnotations: {}
-
-podSecurityContext: {}
-  # fsGroup: 2000
-
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 80
-
-ingress:
-  enabled: false
-  ssl: false
-  servicePort: ""
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
 autoscaling:
   enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
-
-### My Custom config
-application:
-  name: ""
-  type: ""
-  services:
-    - name: ""
-      port: 0
-    # - name: ssh
-    #   port: 22
-volumes:
-  enabled: false
-  mountPath:
-    - extdir:containerDir
-  ownership: ""
-  type:
-    # nfs:
-    #   server: ""
-    #   path: ""
-    #   readOnly: false
-    # pvc:
-    #   size: 2Gi
 database:
   enabled: false
-  server: ""
+image:
+  imagePolicy: false
+  repository: ""
+  tag: ""
+env: {}
+resources:
+  limits:
+    memory: ""
+    cpu: ""
+  requests:
+    memory: ""
+    cpu: ""
+services: {}
+ingress:
+  enabled: false
+  hosts: []
+  tls: {}
+volumes:
+  enabled: false
+  mountPath: []
+  ownership: ""
+  type:
+    nfs:
+      server: lab-storage.lan
+      path: /volume1/storagelab
