--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -1,4 +1,3 @@
-{{- $livenessPort := "" -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -50,10 +49,12 @@ spec:
               containerPort: {{.targetPort }}
               protocol: TCP
             {{- end }}
-            {{- range .Values.services }}
-              {{- if eq .name "http" }}
-                {{- $livenessPort := .targetPort }}
-            {{- end }}
+          {{- $livenessPort := 80 }}
+          {{- range .Values.services }}
+          {{- if eq .name "http" }}
+          {{- $livenessPort = .targetPort }}
+          {{- end }}
+          {{- end }}
           livenessProbe:
             httpGet:
               path: /
