--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -28,3 +28,6 @@ volumes:
     nfs:
       server: lab-storage.lan
       path: /volume1/storagelab
+deployNotifications:
+  enabled: false
+  image: ""
