look for startup probes

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -28,6 +28,8 @@ volumes:
     nfs:
       server: lab-storage.lan
       path: /volume1/storagelab
+startupProbes:
+  enabled: true
 deployNotifications:
   enabled: false
   image: ""
