--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -55,6 +55,7 @@ spec:
           {{- $livenessPort = .targetPort }}
           {{- end }}
           {{- end }}
+          {{- if .Values.startupProbes.enabled }}
           livenessProbe:
             httpGet:
               path: /
@@ -67,6 +68,7 @@ spec:
               port: {{ $livenessPort }}
             failureThreshold: 30
             periodSeconds: 10
+          {{- end }}
       {{- if .Values.volumes.enabled }}
       {{- if .Values.volumes.type.pvc }}
       {{- $ownership := regexSplit ":" .Values.volumes.ownership -1 }}
