--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -73,11 +73,13 @@ spec:
       {{- if .Values.volumes.type.pvc }}
       {{- $ownership := regexSplit ":" .Values.volumes.ownership -1 }}
       {{- $gid := slice $ownership 0 1 | first }}
-      nodeSelector:
-        kubernetes.io/arch: {{ .Values.nodeSelector }}
       securityContext:
         fsGroup: {{ $gid | default 0 }}
       {{- end}}
+      nodeSelector:
+        {{- with .Values.nodeSelector }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       volumes:
         - name: {{ .Release.Name }}-volume
           {{- if .Values.volumes.type.nfs }}
