--- a/chart/templates/initWebsiteDir.yaml
+++ b/chart/templates/initWebsiteDir.yaml
@@ -45,6 +45,10 @@ spec:
             - -c
             - >-
                 mkdir -p $(WEBSITE_DIRS);
+      nodeSelector:
+        {{- with .Values.nodeSelector }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       volumes:
         - name: {{ .Release.Name }}-volume
           nfs:
