--- a/chart/templates/initWebsiteDir.yaml
+++ b/chart/templates/initWebsiteDir.yaml
@@ -25,8 +25,8 @@ spec:
     spec:
       restartPolicy: Never
       containers:
-        - name: alpine
-          image: arm32v7/alpine:3.17.2
+        - name: "{{ .Release.Name }}-init-websitedir"
+          image: gitea.angrybits.pl/kkrolikowski/toolbox:0.0.1
           env:
           - name: WEBSITE_DIRS
             {{- range .Values.volumes.mountPath }}
