set protocol family dynamicaly

--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -15,7 +15,7 @@ spec:
   {{- end }}
   ports:
     - name: {{ .name }}
-      protocol: TCP
+      protocol: {{ .protocol }}
       port: {{ .servicePort }}
       targetPort: {{ .targetPort }}
   selector:
