--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -8,6 +8,7 @@ metadata:
   name: {{ $.Release.Name }}-{{ .name }}-svc
   namespace: default
 spec:
+  externalTrafficPolicy: Local
   {{- if eq .name "http" }}
   type: ClusterIP
   {{- else }}
