--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -1,7 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- range .Values.ingress.hosts }}
 {{- $subdomain := .name | splitList "." | first -}}
-{{- $ReleaseName := printf "%s-%s" .Release.Name $subdomain -}}
+{{- $ReleaseName := printf "%s-%s" $.Release.Name $subdomain -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
