--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -7,7 +7,7 @@ kind: Ingress
 metadata:
   name: {{ $ReleaseName }}
   namespace: default
-  {{- if .Values.ingress.ssl.enabled }}
+  {{- if .Values.ingress.ssl }}
   annotations:
     kubernetes.io/ingress.class: traefik
     cert-manager.io/cluster-issuer: letsencrypt
