--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -81,6 +81,10 @@ spec:
             failureThreshold: 30
             periodSeconds: 10
           {{- end }}
+      {{ if .Values.image.registrySecret }}
+      imagePullSecrets:
+        - name: {{ .Values.image.registrySecret }}
+      {{ end }}
       nodeSelector:
       {{- with .Values.nodeSelector }}
         {{- toYaml . | nindent 8 }}
