--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -62,22 +62,10 @@ spec:
               protocol: TCP
             {{- end }}
           {{- if .Values.startupProbes.enabled }}
-          {{- $livenessPort := 80 }}
-          {{- range .Values.services }}
-          {{- if eq .name "http" }}
-          {{- $livenessPort = .targetPort }}
-          {{- end }}
-          {{- end }}
-          livenessProbe:
-            httpGet:
-              path: /
-              port: {{ $livenessPort }}
-            failureThreshold: 10
-            periodSeconds: 10
           startupProbe:
             httpGet:
               path: /
-              port: {{ $livenessPort }}
+              port: {{ .Values.startupProbes.port | default 80 }}
             failureThreshold: 30
             periodSeconds: 10
           {{- end }}
