--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -69,6 +69,13 @@ spec:
             failureThreshold: 30
             periodSeconds: 10
           {{- end }}
+          {{- if .Values.livenessProbe }}
+          livenessProbe:
+            tcpSocket:
+              port: {{ .Values.livenessProbe.port }}
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          {{- end }}
       {{ if .Values.image.registrySecret }}
       imagePullSecrets:
       - name: {{ .Values.image.registrySecret }}
