static LB if it's defined

--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -9,6 +9,9 @@ metadata:
   namespace: default
 spec:
   type: {{ .type }}
+  {{- if .loadBalancerIP }}
+  loadBalancerIP: {{ .loadBalancerIP }}
+  {{- end }}
   ports:
     - name: {{ .name }}
       protocol: {{ .protocol }}
