--- a/chart/templates/initWebsiteDir.yaml
+++ b/chart/templates/initWebsiteDir.yaml
@@ -32,7 +32,7 @@ spec:
             {{- range .Values.volumes.mountPath }}
             {{- $dirmap := regexSplit ":" . -1 -}}
             {{- $dir := slice $dirmap 0 1 | first -}}
-            {{- if .Values.volumes.rootDir -}}
+            {{- if $.Values.volumes.rootDir -}}
             {{- $dirs_to_create = printf "%s %s/%s/%s" $dirs_to_create "/storage" $.Values.volumes.rootDir $dir }}
             {{- else }}
             {{- $dirs_to_create = printf "%s %s/%s/%s" $dirs_to_create "/storage" $.Release.Name $dir }}
