--- a/chart/test_values.yaml
+++ b/chart/test_values.yaml
@@ -51,3 +51,14 @@ ingress:
       servicePort: 80
     - name: registry.lab.angrybits.pl
       servicePort: 5050
+startupProbe:
+  httpGet:
+    path: /
+    port: 666
+  failureThreshold: 30
+  periodSeconds: 10
+livenessProbe:
+  tcpSocket:
+    port: 666
+  initialDelaySeconds: 10
+  periodSeconds: 2
