fix: directory allready exists

--- a/chart/templates/initWebsiteDir.yaml
+++ b/chart/templates/initWebsiteDir.yaml
@@ -48,7 +48,10 @@ spec:
           args:
             - -c
             - >-
-                mkdir -p $(WEBSITE_DIRS); chown -R $(OWNERSHIP) $(WEBSITE_DIRS);
+                if [! -d $(WEBSITE_DIRS) ]; then
+                  mkdir -p $(WEBSITE_DIRS); 
+                  chown -R $(OWNERSHIP) $(WEBSITE_DIRS);
+                endif
       nodeSelector:
         {{- with .Values.nodeSelector }}
         {{- toYaml . | nindent 8 }}
