--- a/chart/templates/ingress.yaml
+++ b/chart/templates/ingress.yaml
@@ -7,7 +7,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $ReleaseName }}
-  namespace: default
+  namespace: {{ $.Release.Namespace }}
   {{- if $.Values.ingress.ssl }}
   annotations:
     kubernetes.io/ingress.class: traefik
