--- a/chart/templates/pvc.yaml
+++ b/chart/templates/pvc.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ .Release.Name }}-pvc
-  namespace: default
+  namespace: {{ .Release.Namespace }}
 spec:
   persistentVolumeReclaimPolicy: Recycle
   accessModes:
