--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "{{ $.Release.Name }}-{{ .name }}"
-  namespace: default
+  namespace: {{ $.Release.Namespace }}
 spec:
   type: {{ .type }}
   {{- if .loadBalancerIP }}
